@@ -1,3 +1,11 @@
+2004-12-23  Mark Kettenis  <kettenis@gnu.org>
+
+	* i386-nto-tdep.c: Reorder include files.
+	(i386nto_svr4_fetch_link_map_offsets): Remove function.
+	(init_i386nto_ops, i386nto_init_abi): Use
+	svr4_ilp32_fetch_link_map_offsets instead of
+	i386nto_svr4_fetch_link_map_offsets.
+
 2004-12-21  Mark Kettenis  <kettenis@gnu.org>
 
 	* hppa-tdep.c (hppa_frame_prev_register_helper): Make 64-bit safe.
